--- a/fe/src/app/globals.css
+++ b/fe/src/app/globals.css
@@ -1,13 +1,13 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: 121, 96, 167;
+  --background-end-rgb: 121, 96, 140;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -83,6 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  min-height: 100vh;
 }
 
 body {
@@ -104,4 +105,38 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.text-center {
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+}
+
+.main-section {
+  display: block;
+  margin: auto;
+  width: fit-content;
+  text-align: center;
+}
+
+.main-section h1 {
+  font-size: 1.5rem;
+  color: white;
+  background-color: #841811;
+}
+
+.custom-app-bar {
+  background-color: black;
+}
+
+.custom-app-bar a {
+  background-color: #363643;
+  border-radius: 1rem;
+  padding-inline: 0.7rem;
+  margin-inline: 0.2rem;
+}
+
+.custom-app-bar a:hover {
+  background-color: #1976d2;
 }
